force-app/main/default/objects/FieloPLT__AuditPermission__c/FieloPLT__AuditPermission__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It enables to control permissions granted throughout time.</description>
    <label>Audit Admin Permissions</label>
</CustomObject>