force-app/main/default/objects/FieloPLT__AuditPermission__c/fields/FieloPLT__From__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__From__c</fullName>
    <description>Date when Admin permissions have been granted from.</description>
    <inlineHelpText>Date when Admin permissions have been granted from.</inlineHelpText>
    <label>From</label>
    <type>DateTime</type>
</CustomField>