force-app/main/default/objects/FieloPLT__AuditPermission__c/fields/FieloPLT__GrantingUser__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__GrantingUser__c</fullName>
    <description>User who grants Admin permissions.</description>
    <inlineHelpText>Enter the user who have grants Admin permissions.</inlineHelpText>
    <label>Granting User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>