force-app/main/default/objects/FieloPLT__AuditPermission__c/fields/FieloPLT__To__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__To__c</fullName>
    <description>Date when Admin permissions have been granted to.</description>
    <inlineHelpText>Date when Admin permissions have been granted to.</inlineHelpText>
    <label>To</label>
    <type>DateTime</type>
</CustomField>