force-app/main/default/objects/FieloPLT__AuditPermission__c/fields/FieloPLT__UserGranted__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__UserGranted__c</fullName>
    <description>User who grants the Admin permissions.</description>
    <inlineHelpText>Enter the User who grants the Admin permissions.</inlineHelpText>
    <label>User granted</label>
    <length>18</length>
    <type>Text</type>
</CustomField>